# PicoController

./: .gitignore  .gitmodules  LICENSE  README.md
Pico/: CMakeLists.txt  Core1.cpp  Core1.h  encoder.c  encoder.h  etl_profile.h  main.c  main.cpp  main.h  pins.h
Pico/controller/: CMakeLists.txt  Communication.cpp  Communication.h  Core1.cpp  Core1.h  Time.cpp  Time.h  UserInteractions.cpp  UserInteractions.h  etl_profile.h  generate_inputs.ps1  main.cpp  main.h  pc.gatt  pins.h
Pico/controller/Communication/: Bluetooth.cpp  Bluetooth.h  Communication.cpp  Communication.h
Pico/controller/IO/: CurrentIO.h  Pins.cpp  Pins.h
Pico/controller/IO/Input/: Button.cpp  Button.h  CreateInputs.h  Encoder.cpp  Encoder.h  EncoderWithButton.cpp  EncoderWithButton.h  Input.h
Pico/controller/IO/Output/: LED.cpp  LED.h  Output.h  PicoWDefaultLED.cpp  PicoWDefaultLED.h
Pico/controller/config/: bluetooth.json  default.json  inputs_bt.json  inputs_original.json
Pico/controller/config_headers/: btstack_config.h
Pico/controller/inputs/: Button.cpp  Button.h  CreateInputs.h  Encoder.cpp  Encoder.h  EncoderWithButton.cpp  EncoderWithButton.h  Input.h
Pico/inputs/: Button.cpp  Button.h  CreateInputs.h  Encoder.cpp  Encoder.h  EncoderWithButton.cpp  EncoderWithButton.h  Input.h
Pico/tests/: CMakeLists.txt  main.cpp
desktop/PicoController/: PicoController.sln  SoundController.sln  publish.ps1
desktop/PicoController/Benchmarks/: Benchmarks.csproj  LibraryImportVaDllImport.cs  Program.cs
desktop/PicoController/PicoController.Cli/: App.cs  DefaultBehavior.cs  Handlers.cs  Help.cs  PicoController.Cli.csproj  Program.cs
desktop/PicoController/PicoController.Cli/Properties/: launchSettings.json
desktop/PicoController/PicoController.Core/: FileSystem.cs  HandlerInformations.cs  HandlerProvider.cs  InvokeHandler.cs  LocationProvider.cs  PicoController.Core.csproj  PluginActionExceptionEventArgs.cs  Plugins.cs
desktop/PicoController/PicoController.Core/BuildtInActions/: KeyboardCombination.cs  KeyboardSequence.cs  PrintToConsole.cs  Volume.cs
desktop/PicoController/PicoController.Core/Config/: Action.cs  Config.cs  ConfigChangedEventArgs.cs  ConfigRepository.cs  Device.cs  IConfigRepository.cs  Input.cs  InputAction.cs  Interface.cs  InterfaceType.cs
desktop/PicoController/PicoController.Core/DependencyInjection/: Bootstrapper.cs
desktop/PicoController/PicoController.Core/Devices/: Device.cs  DeviceManager.cs
desktop/PicoController/PicoController.Core/Extensions/: DeconstructExtensions.cs  IEnumerable.cs  Serilog.cs  Splat.cs
desktop/PicoController/PicoController.Core/Input/: Input.cs  InputMessage.cs  InputType.cs
desktop/PicoController/PicoController.Core/Misc/: IClonable.cs  ICloneable.cs  ObservableCircularBuffer.cs
desktop/PicoController/PicoController.Core/RemoveLater/: Output.cs
desktop/PicoController/PicoController.Gui/: App.axaml  App.axaml.cs  Encoder.cs  GlobalUsings.cs  LimitedAvaloniaList.cs  MyLogger.cs  PicoController.Gui.csproj  Program.cs  ViewLocator.cs
desktop/PicoController/PicoController.Gui/Converters/: BooleanToGridLengthConverter.cs  BooleanToTextWrappingConverter.cs  Converters.cs  DeviceToDeviceViewModelConverter.cs  InputTypeToStringConverter.cs  ObjectToIsNullConverter.cs  PicoControllerTextAlignmentConverter.cs
desktop/PicoController/PicoController.Gui/DependencyInjection/: Bootstrapper.cs
desktop/PicoController/PicoController.Gui/Design/: DesignConfigRepository.cs  DesignPluginManager.cs  DesignRepositoryHelper.cs
desktop/PicoController/PicoController.Gui/Helpers/: IRepositoryHelper.cs  RepositoryHelper.cs
desktop/PicoController/PicoController.Gui/Models/: DeviceConfigModel.cs  DeviceInputActionConfigModel.cs  DeviceInputConfigModel.cs  DeviceInterfaceConfigModel.cs  ReactiveKeyValuePair.cs
desktop/PicoController/PicoController.Gui/Plugin/: DisplayInfo.cs  Storage.cs
desktop/PicoController/PicoController.Gui/Properties/: launchSettings.json
desktop/PicoController/PicoController.Gui/Styles/: MainWindow.axaml
desktop/PicoController/PicoController.Gui/Themes/: ThemeChangedEventArgs.cs  ThemeManager.cs  ThemeManagerStub.cs  ThemeManagerWindows.cs
desktop/PicoController/PicoController.Gui/ViewModels/: DisplayInfoWindowViewModel.cs  HandlerEditorViewModel.cs  HandlersViewModel.cs  MainWindowViewModel.cs  ViewModelBase.cs
desktop/PicoController/PicoController.Gui/Views/: DisplayInfoWindow.axaml  DisplayInfoWindow.axaml.cs  HandlerEditorView.axaml  HandlerEditorView.axaml.cs  HandlersView.axaml  HandlersView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
desktop/PicoController/PicoController.Plugin.Ext/: DisplayInfos.fs  PicoController.Plugin.Ext.fsproj
desktop/PicoController/PicoController.Plugin.Interfaces/: HandlerInformations.cs  IDisplayInfo.cs  IEditor.cs  IInvokable.cs  IInvokeHandler.cs  IPluginAction.cs  IPluginInfo.cs  IStorage.cs  IValidValues.cs  PicoController.Plugin.csproj
desktop/PicoController/PicoController.Plugin.Interfaces/Attributes/: CodeEditorAttribute.cs  FileCodeEditorAttribute.cs  GuiEditorAttribute.cs  HideHandlerAttribute.cs  PluginConstructorAttribute.cs  ValidValueAttribute.cs
desktop/PicoController/PicoController.Plugin.Interfaces/DisplayInfos/: DisplayInformations.cs  ProgressBar.cs  Text.cs
desktop/PicoController/PicoController.RestartAfterCrash/: PicoController.RestartAfterCrash.csproj  Program.cs
desktop/PicoController/PicoController.VirtualDesktop.Windows.Playground/: PicoController.VirtualDesktop.Windows.Playground.csproj  Program.cs  VirtualDesktopAccessorInterop.cs
desktop/PicoController/Plugins/: PicoController.Core_prebuild.ps1  Plugins.sln  build.ps1  buildAllHere.ps1  buildTouserFolder.ps1
desktop/PicoController/Plugins/PicoControler.TidalVolume/: Volume.cs  (+1 more)
desktop/PicoController/SerialPortTest/: Program.cs  SerialPortTest.csproj
desktop/SoundController/: SoundController.sln
desktop/SoundController/SerialControler.Gui/: App.axaml  App.axaml.cs  Encoder.cs  Program.cs  SerialControler.Gui.csproj  ViewLocator.cs
desktop/SoundController/SerialPortTest/: Program.cs
(+104 files in other folders)
